# rust-wasm-rpc

./: Cargo.toml
examples/complex_arguments/: Cargo.toml  README.md  complex_arguments.wasm  complex_arguments.wast  run.js
examples/complex_arguments/scripts/: build.sh
examples/complex_arguments/src/: complex_arguments.rs  lib.rs
examples/error_handler/: Cargo.toml  README.md  run.js
examples/error_handler/src/: error_handler.rs  lib.rs
examples/wasm_snappy/: Cargo.toml  README.md  run.js  test.txt.sz
examples/wasm_snappy/scripts/: build.sh  minify.js
examples/wasm_snappy/src/: lib.rs
src/: error.rs  lib.rs  memory.rs
wasm-rpc/: Cargo.toml
wasm-rpc-macros/: Cargo.toml  rustfmt.toml
wasm-rpc-macros/src/: lib.rs  memory.rs  native.rs
wasm-rpc/src/: abort.rs  bytes.rs  debug.rs  error.rs  external.rs  hook.rs  lib.rs  memory.rs  pointer.rs  response.rs  set_stdio.rs
