[package]
name = "wasm-rpc-macros"
version = "0.2.6"
description = "Expose rust functions as WASM RPC interfaces"
license = "MIT"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4.9", default-features = false }
syn = { version = "0.14.5", features = ["full"] }
quote = "0.6.4"
