[package]
name = "wasm-rpc-macros"
version = "0.2.15"
description = "Expose rust functions as WASM RPC interfaces"
license = "MIT"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.18", default-features = false }
syn = { version = "1.0.33", features = ["full", "visit", "extra-traits"] }
quote = "1.0.7"
