[package]
name = "wasm-rpc"
description = "WASM rpc is a standard interface to programs that compile to WebAssembly"
license = "MIT"
version = "0.1.1"
authors = ["Mason Fischer <mason@kissr.co>"]

[dependencies]
cbor-no-std = { path = '../../rust-cbor-no-std', features = ["no_std"] }
wee_alloc = {"git" = "https://github.com/rustwasm/wee_alloc"}
