[package]
name = "wasm-rpc"
description = "WASM rpc is a standard interface to programs that compile to WebAssembly"
license = "MIT"
version = "0.2.18"
authors = ["Mason Fischer <mason@kissr.co>"]

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_cbor = "0.11.1"
serde_bytes = "0.11.3"
